# Primero-Ingenieria-Informatica

./: .gitignore  README.md
AYED/: hola.cc
AYED/practica01/: racional_t.cc
AYED/practica02/: data.txt  main_p2.cpp  matrix_t.hpp  rational_t.cpp  rational_t.hpp  vector_t.hpp
AYED/practica03/: data_polynomial2.txt  main_polynomial.cc  pair_t.h  polynomial.h  vector_t.h
AYED/practica04/: main_sllpolynomial.cc  pair_t.h  sll_node_t.h  sll_t.h  sllpolynomial.h  vector_t.h
AYED/practica05/: rpn_t.h
AYED/practica1/: main_racional_t.cc  rational_t.h
AYED/practica2/: main_p2.cpp  matrix_t.hpp
AYED/practica3/: sparse_vector_t.h
AYED/practica4/: data_sllpolynomial.txt  entrada  main_sllpolynomial.cc  makefile
AYED/practica5/: main_rpn_t.cc  rpn_t.h
AYED/practica6/: main_maze_t.cpp  maze_t.cpp  maze_t.hpp
AYED/practicas_examen/: examen 2023  examen 2023 2  problemas  problemas2
IB/p09/programas-p09/scalar_product/: CMakeLists.txt
IB/p09/programas-p09/scalar_product/src/: main.cc  scalar_product.cc  scalar_product.h
IB/practica-examen1/: box.cc  car.cc  collatz.cc  guay.cc
IB/practica-examen2/: car.cc  doublemanager.cc  guay.cc  luhn.cc  switch_case.cc
IB/practica_examen/: guay.cc
PC/: simulacro_1.s
PC/collatz/: collatz.s
PC/numeroe/: numeroe-d-skel.s
PC/polinomio/: polinomio.s
PC/practica00-01/: numeroe.cc  (+1 more)
optimizacion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  entrada2  entrada3  entrada4  entrada5  grafo.cc  grafo.h  grafo1.gr  grafo2.cc  grafo3.gr  grafokruskal0.gr  kruskalprueba  main.cc  nepe.cc  practica3.txt
(+162 files in other folders)
